--- a/apps/login_app/static/login_app/css/style.css
+++ b/apps/login_app/static/login_app/css/style.css
@@ -1,191 +1,95 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Raleway', sans-serif;
+*{
+  overflow: hidden;
+}
+.animation-area{
+  background: linear-gradient(-45deg, #8942a8, #ba382f);
+  width: 100%;
+  height: 100vh;
 }
 
-:root {
-  --primary-color: rgb(52,58,64,0.5);
-  --secondary-color: white;
-  --font-color: white;
-  --bg-color: black;
-  --heading-color: red;
-  --hover-color: white;
-  --subcategory-color: orange;
+.box-area{
+  /* position: relative; */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
 }
 
-@media(max-width:960px){
-  .container{
-    padding-right: 3rem;
-    padding-left: 3rem;
+.box-area li{
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 25px;
+  height: 25px;
+  background: rgba(255,255,255,0.2);
+  animation: animate 20s linear infinite;
+}
+
+.box-area li:nth-child(1){
+  left: 86%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+  bottom: -150px;
+}
+
+.box-area li:nth-child(2){
+  left: 12%;
+  width: 30px;
+  height: 30px;
+  animation-delay: 1.5s;
+  animation-duration: 10s;
+  bottom: -150px;
+}
+
+.box-area li:nth-child(3){
+  left: 70%;
+  width: 100px;
+  height: 100px;
+  animation-delay: 5.5s;
+  bottom: -150px;
+
+}
+
+.box-area li:nth-child(4){
+  left: 70%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 15s;
+  bottom: -150px;
+
+}
+.box-area li:nth-child(5){
+  left: 65%;
+  width: 40px;
+  height: 40px;
+  animation-delay: 0s;
+  bottom: -150px;
+
+}
+
+.box-area li:nth-child(6){
+  left: 15%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3.5s;
+  bottom: -150px;
+
+}
+
+@keyframes animate{
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+  }
+  100%{
+      transform: translateY(-800px) rotate(360deg);
+      opacity: 0;
   }
 }
 
-body {
-  background: url("../images/bay.jpg") no-repeat center center fixed;
-}
-
-.container{
-  height: 100vh;
-  background-color: black;
-}
-
-.corner {
-  z-index: -1;
-}
-
-.center-login-box {
-  margin: 0 auto;
-  margin-top: 10%;
-  height: 450px;
-  width: 300px;
-  color: white;
-  z-index: 0;
-  /* background-color: rgb(255,255,255); */
-  /* background-color: purple; */
-  background-color: rgb(255,255,255,0.3);
-  /* background-color: rgb(0,0,0,0.6); */
-  /* border-radius: 5px; */
-  /* padding: 15px; */
-  /* box-shadow: 3x 3px 5px 6px; */
-  /* border: 4px solid white; */
-  position: relative;
-}
-
-.corner-top-left {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  top: -15px;
-  left: -15px;
-  border-left: 3px solid white;
-  border-top: 3px solid white;
-}
-
-.corner-top-right {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  top: -15px;
-  right: -15px;
-  border-right: 3px solid white;
-  border-top: 3px solid white;
-}
-
-.corner-bottom-right {
-  /* background-color: red; */
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  bottom: -15px;
-  right: -15px;
-  border-right: 3px solid white;
-  border-bottom: 3px solid white;
-}
-
-.corner-bottom-left {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  bottom: -15px;
-  left: -15px;
-  border-left: 3px solid white;
-  border-bottom: 3px solid white;
-}
-
-.center-login-box input {
-  width: 250px;
-  height: 30px;
-  margin-top: 20px;
-  /* background: rgb(255,255,255,0.5); */
-  background: none;
-  border: none;
-  border-bottom: 1px solid white;
-  color: white;
-}
-
-.center-login-box button {
-  margin-top: 20px;
-  border: none;
-  background: rgb(255,255,255,0.2);
-  color: white;
-}
-
-.center-login-box button:hover {
-  margin-top: 20px;
-  border: 1px solid white;
-  background: rgb(255,255,255,0.4);
-  color: white;
-}
-
-.center-login-box a {
-  color: white;
-  text-decoration: none;
-}
-
-.new_user {
-  font-size: 12px;
-  text-align: center;
-}
-
-.brand {
-  text-align: center;
-  padding-bottom: 10px;
-  /* border-bottom: 2px solid cyan; */
-}
-
-.header {
-  width: 960px;
-  height: 450px;
-  margin: 0 auto;
-}
-
-.login-button {
-  width: 250px;
-  height: 30px;
-}
-
-.login-container {
-  background-color: var(--bg-color);
-  color: var(--font-color);
-  
-}
-
-/* Validation */
-.text-success {
-  color: red;
-}
-
-input.middle:focus {
-  outline-width: 0;
-}
-
-::placeholder {
-  color: white;
-  opacity: 0.5; /* Firefox */
-}
-
-.logo {
-  width: 150px;
-  height: 150px;
-}
-
-.logo-container {
-  margin: 0 auto;
-  text-align: center;
-  padding: 15px;
-}
-
-.login-table {
-  margin: 0 auto;
-}
-
-.overlay {
-  position: absolute;
-  height: 100vh;
-  width: 100%;
-  left: 0;
-  top: 0;
-  background-color: rgb(0,0,0,0.25);
+.underline{
+  text-decoration: underline;
 }
