--- a/apps/login_app/templates/login_app/index.html
+++ b/apps/login_app/templates/login_app/index.html
@@ -7,67 +7,58 @@
     {% load staticfiles %}
     <!-- <link rel="stylesheet" href="{% static 'login_app/css/Log.css' %}"> -->
     <link rel="stylesheet" href="{% static 'login_app\css\style.css' %}">
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
     <title>Lit Notes</title>
 </head>
-<body style="background-color: red;">
-    <!-- <div class="container">
-        <div class="header">
-            <video src="static\notes_app\images\lit_notes.mp4" autoplay="true" loop="true"></video>
-        </div>
-    </div> -->
-<div class="overlay"></div>
-<div class="center-login-box">
-    <form action="/login" method="POST">
-        {% csrf_token %}
-        <table class="login-table">
-            <tr>
-                <td colspan="2">
-                    <div class="logo-container">
-                    <img src="{% static '\login_app\images\SNLogo2.png' %}" class="logo">
-                    <h1 class="brand">Slick Notes</h1>
+<body>
+    <div class="animation-area">
+        <div class="h-100 row align-items-center">
+            <div class="d-flex justify-content-center col mb-5">
+                <div class="border border-dark  rounded-lg p-5 text-center">
+                    <h1 class="text-spread text-dark">Welcome to NotePad</h1>
+                    <hr class="hr-white">
+                    <!-- Validation Check -->
+                    <div class='small'>
+                        {% if messages %}
+                        <ul class="messages">
+                            {% for message in messages %}
+                            <p{% if message.tags %} class="{{ message.tags }} text-light"{% endif %}>{{ message }}</p>
+                            {% endfor %}
+                        </ul>
+                        {% endif %}
+                    </div>
+
+                    <!-- Login Form -->
+                    <form action="/login" method="POST">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <fieldset>
+                                <label class="control-label">Email</label>
+                                <input class="form-control" type="email" id="email" name="email">
+                            </fieldset>
+                            <fieldset>
+                                <label class="control-label mt-3">Password</label>
+                                <input class="form-control" type="password" id="password" name="password">
+                            </fieldset>
+                            <button class="btn btn-dark mt-3" type="submit">Login Now!</button>
+                        </div>
+                    </form>
+
+                    <a class="float-right text-dark underline" href="/pre_login">Need to register?</a>
                 </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <input type="email" id="email" name="email" placeholder="Email">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <input type="password" id="password" name="password" placeholder="Password">
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <button class="login-button"><a href="#">Login</a></button>
-                </td>
-            </tr>
-            <tr class="new_user">
-                <td colspan=2>New user? <a href="pre_login">Register here</a></td>
-            </tr>
-        </table>
-    </form>
-    <div class="corner corner-top-left"></div>
-    <div class="corner corner-top-right"></div>
-    <div class="corner corner-bottom-left"></div>
-    <div class="corner corner-bottom-right"></div>
-</div>    
-
-<!-- </div> -->
-<script>
-
-// Hover
-$(".center-login-box").hover(function(){
-  $(".corner").animate({height: "250px", width: "250px"});
-}, function(){
-  $(".corner").animate({height: "50px", width: "50px"});
-});
-
-</script>
+            </div>
+        </div> 
+        <ul class="box-area">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>   
 </body>
 </html>
