--- a/apps/notes_app/static/notes_app/css/style.css
+++ b/apps/notes_app/static/notes_app/css/style.css
@@ -10,11 +10,11 @@ html {
 
 /* Light Mode */
 :root {
-  --primary-color: rgb(29,185,84,0.6);
+  --primary-color: #ba382f;
   --secondary-color: red;
   --font-color: #424242;
   --bg-color: white;
-  --heading-color: #1DB954;
+  --heading-color: #8942a8;
   --hover-color: white;
   --subcategory-color: orange;
   --font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -22,11 +22,11 @@ html {
 
 /* Dark mode */
 [data-theme="dark"] {
-  --primary-color: rgb(52,58,64,0.5);
+  --primary-color: white;
   --secondary-color: white;
   --font-color: white;
   --bg-color: #161625;
-  --heading-color: red;
+  --heading-color: #23D5AB;
   --hover-color: white;
   --subcategory-color: orange;
   --font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -44,6 +44,8 @@ body {
   background: url(../images/asfalt-light.png);
   height: 1000px;
 }
+
+
 
 .spotify-green {
     color:#1DB954;
@@ -190,7 +192,7 @@ body {
   /* background-color: black; */
   /* background: rgb(66, 135, 245, 0.5); */
   border: 1px solid var(--heading-color);
-  background: var(--primary-color);
+  background: white;
   color: white;
   /* background: rgb(28,150,255, 0.25); */
   overflow: hidden;
@@ -522,7 +524,7 @@ input:checked + .slider:before {
 
 
 .add_button {
-  color: #1DB954;
+  color: #ba382f;
 }
 
 .add_notes_table_container {
@@ -608,6 +610,7 @@ html { -ms-overflow-style: none; }
 
 .notes_li {
   margin-top: 10px;
+  color:black;
 }
 
 .updated_at {
